--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -16,6 +17,7 @@
     "expo": "~52.0.23",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.2.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
