--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -18,15 +20,18 @@
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.2.0",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-paper": "^5.13.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-svg": "^15.11.1",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
