--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "@tanstack/react-query": "^5.66.0",
     "expo": "~52.0.23",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.0",
