--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/stack": "^7.1.1",
     "@tanstack/react-query": "^5.66.0",
     "expo": "~52.0.23",
+    "expo-print": "^14.0.3",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.2.0",
